# safe_deal

./: ARCHITECTURE.md  README.md  package.json  vercel.json
contracts/merchant-escrow/: Cargo.toml
contracts/merchant-escrow/src/: lib.rs  test.rs
contracts/merchant-escrow/test_snapshots/test/: test_auto_refund.1.json  test_auto_refund_not_locked.1.json  test_auto_refund_returns_usdc_to_buyer.1.json  test_auto_refund_too_early.1.json  test_cancel_deal.1.json  test_cancel_deal_already_locked.1.json  test_cancel_deal_waiting.1.json  test_cancel_deal_wrong_seller.1.json  test_cancel_locked_deal_refunds_buyer.1.json  test_confirm_delivery.1.json  test_confirm_delivery_not_locked.1.json  test_confirm_delivery_releases_usdc_to_seller.1.json  test_confirm_delivery_wrong_buyer.1.json  test_create_deal.1.json  test_create_deal_negative_amount.1.json  test_create_deal_zero_amount.1.json  test_create_deal_zero_expiry.1.json  test_create_multiple_deals_increments_id.1.json  test_double_initialize.1.json  test_full_deal_lifecycle.1.json  test_full_deal_lifecycle_with_real_usdc.1.json  test_full_refund_lifecycle_with_real_usdc.1.json  test_get_buyer_deals_empty.1.json  test_get_deal_not_found.1.json  test_get_seller_deals_empty.1.json  test_initialize.1.json  test_lock_payment.1.json  test_lock_payment_nonexistent_deal.1.json  test_lock_payment_transfers_usdc.1.json  test_lock_payment_wrong_amount.1.json
frontend/: .gitignore  download-fonts.js  fetch_xdr.mjs  get_id.js  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  test-sc-map.js  test_decode.mjs  (+2 more)
(+31 files in other folders)
