[package]
name = "merchant-escrow"
version = "0.2.0"
edition = "2021"

[dependencies]
soroban-sdk = "21.7"

[dev-dependencies]
soroban-sdk = { version = "21.7", features = ["testutils"] }
soroban-token-sdk = "21.7"

[features]
testutils = ["soroban-sdk/testutils"]

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
